fixed logo z-index

--- a/app/assets/stylesheets/core/layouts/modern/_primary_nav.sass
+++ b/app/assets/stylesheets/core/layouts/modern/_primary_nav.sass
@@ -36,9 +36,9 @@
       margin: 0
 
 .media--lp-logo
-  +z-layer(middle)
+  +z-layer(top)
   @extend %inline-block
-  height: 41px
+  height: 43px
   margin: 7px 10px 0 0
   width: 82px
   vertical-align: top
